--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 <style>
-    /* Base  */
+    /* Base style */
     :root {
       --primary: #5eeb11; /* Subtle royal orang */
       --primary-light: #f33c13; /* Lighter royal orange */
