--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Crabster Technologyyyyyyyyyyyyyyyyyyyyyyyy</title>
+  <title>Crabster Technology</title>
   <link rel="website icon" type="image/jpeg" href="logo.jpg">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
