--- a/index.html
+++ b/index.html
@@ -330,9 +330,9 @@
             Review
             <span class="absolute bottom-0 left-0 w-0 h-0.5 bg-primary transition-all duration-300"></span>
           </a>
-         
-  
-    <a href="workq.html">WorkQ Time Tracker</a>
+         <button onclick="window.location.href='/workq'" class="workq-button">
+  Open WorkQ Tracker
+</button>
         </nav>
         
         <!-- CTA Button -->
