edited button in index.html

--- a/index.html
+++ b/index.html
@@ -330,9 +330,14 @@
             Review
             <span class="absolute bottom-0 left-0 w-0 h-0.5 bg-primary transition-all duration-300"></span>
           </a>
-         <button onclick="window.location.href='/workq'" class="workq-button">
-  Open WorkQ Tracker
-</button>
+        <a href="#contact" class="nav-link text-dark hover:text-primary transition-colors duration-300 font-medium">
+            Contact
+            <span class="absolute bottom-0 left-0 w-0 h-0.5 bg-primary transition-all duration-300 bottom-line"></span>
+        </a>
+        <a href="/workq" class="relative nav-link text-dark hover:text-primary transition-colors duration-300 font-medium">
+            Open WorkQ Tracker
+            <span class="absolute bottom-0 left-0 w-0 h-0.5 bg-primary transition-all duration-300 bottom-line"></span>
+        </a>
         </nav>
         
         <!-- CTA Button -->
