edited view products

--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
       </a>
       <a href="#projects"
         class="px-8 py-3 border-2 text-dark rounded-full font-medium transform transition-all duration-300 hover:-translate-y-1 hover:shadow-lg hover:bg-black hover:border-primary">
-        View Projects
+        View Products
       </a>
     </div>
   </div>
